Name:                snaplet-auth-acid
Version:             0.0.1
Synopsis:            Provides an Acid-State backend for the Auth Snaplet
Description:         Project Description Here
License:             BSD3
Author:              Ben Doyle
Maintainer:          benjamin.peter.doyle@gmail.com
Stability:           Experimental
Category:            Web, Snap
Build-type:          Simple
Cabal-version:       >=1.8

Library
  exposed-modules: Snap.Snaplet.Auth.Backends.Acid
  Build-depends:
    base >= 4 && < 5,
    acid-state >= 0.6,
    aeson == 0.6.*,
    attoparsec >= 0.10 && < 0.11,
    cereal >= 0.3 && < 0.4,
    clientsession == 0.8.*,
    errors >= 1.3.1 && < 1.4,
    hashable >= 1.1 && < 1.2,
    MonadCatchIO-transformers >= 0.2 && < 0.4,
    mtl >= 2.0 && < 3,
    safecopy >=  0.6,
    snap == 0.9.*,
    text >= 0.11 && < 0.12,
    time >= 1.1 && < 1.5,
    unordered-containers >= 0.1.4 && < 0.3,
    vector >= 0.7.1 && < 0.11
